--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon server.js",
     "type": "module"
   },
-  
   "author": "Ahmed Anas",
   "license": "ISC",
   "description": "",
@@ -22,7 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "paypal-rest-sdk": "^1.8.1"
   }
-  
 }
