--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,13 +30,12 @@
     "lucide-react": "^0.469.0",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
-    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "use-between": "^1.3.5"
+    "tailwindcss-animate": "^1.0.7"
+   
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
